<resources>
    <!--    <string name="app_name">Doctor</string>-->
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="click_to_register">Click to register</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="click_to_login">Click to login</string>
    <string name="user_details">User Details</string>
    <string name="name">Name</string>
    <string name="d_o_b">D.O.B</string>
    <string name="select">Select</string>
    <string name="choose">Choose Your Role</string>
    <string name="app_name"><b>Doctor Appointment App</b></string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pulmonogis">Pulmonogis</string>
    <string name="neurology">Neurology</string>
    <string name="dentist">Dentist</string>
    <string name="categories">Categories</string>
    <string name="top_doctors">Top Doctors</string>
    <string name="doctor_image">Doctor Image</string>
    <string name="arjun_pandey">Arjun Pandey</string>
    <string name="_3_years">3 Years</string>
    <string name="feedback" />
    <string name="specialization" />
</resources>