<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    android:backgroundTint="@color/light_blue">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_editext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:layout_gravity="center_horizontal">
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
                android:layout_gravity="center"
            android:textSize="36sp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:textColor="@color/light_blue"

        />
            <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:id="@+id/email"
            android:background="@drawable/custom_editext"
            android:drawableLeft="@drawable/baseline_person_24"
            android:drawablePadding="8dp"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_light_background"
            android:layout_marginTop="40dp"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"

                app:endIconMode="password_toggle"
                android:layout_marginTop="40dp"
                app:startIconDrawable="@drawable/baseline_lock_24"
                android:hint="@string/password"
                >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_editext"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_light_background"
                android:id="@+id/password"

                android:inputType="textPassword"
                />
            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progress"
                android:visibility="gone"
                android:layout_gravity="center"
        />
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/login"
                android:text="@string/login"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                android:backgroundTint="@color/light_blue"
                android:layout_marginTop="30dp"
                android:textColor="@color/white"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:textStyle="bold"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_to_register"
        android:id="@+id/register_btn"
        android:padding="8dp"
        android:layout_marginBottom="20dp"

        />

</LinearLayout>